fix: add overflow for menu

--- a/style.css
+++ b/style.css
@@ -774,6 +774,7 @@ select {
   width: 100%;
   max-width: 100%;
   overflow: auto;
+  overflow: auto;
 }
 @media (max-width: 728px) {
   .menu._open {
@@ -1550,12 +1551,14 @@ select {
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-.footer__email:hover::before {
-  background-color: rgba(0, 0, 0, 0.3);
-}
-.footer__email:hover .email__text,
-.footer__email:hover .email__icon {
-  z-index: 0;
+@media (hover: hover) {
+  .footer__email:hover::before {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  .footer__email:hover .email__text,
+  .footer__email:hover .email__icon {
+    z-index: 0;
+  }
 }
 .footer__copyright {
   font-family: "Cyborg";
