--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -54,14 +54,16 @@
       background-color: rgba(0, 0, 0, 0.2);
       z-index: 1;
     }
-    &:hover {
-      &::before {
-        background-color: rgba(0, 0, 0, 0.3);
-      }
+    @media (hover: hover) {
+      &:hover {
+        &::before {
+          background-color: rgba(0, 0, 0, 0.3);
+        }
 
-      .email__text,
-      .email__icon {
-        z-index: 0;
+        .email__text,
+        .email__icon {
+          z-index: 0;
+        }
       }
     }
   }
