--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -230,6 +230,7 @@
     grid-template-rows: 1fr 3fr;
     width: 100%;
     max-width: 100%;
+    overflow: auto;
     @media (max-width: 728px) {
       grid-template-areas: "small" "menu";
       grid-template-columns: 1fr;
